# fundme

./: Dockerfile  README.md  docker-compose-production.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: django.properties.json  django.yml
fundme/campaigns/: models.py
fundme/campaigns/migrations/: 0001_created_campaign_and_donation.py
fundme/frontend/: Dockerfile  package-lock.json  package.json
fundme/frontend/public/: index.html
fundme/frontend/src/: App.js  index.js  login.js  nav.js
fundme/frontend/src/components/: campaign.js
fundme/frontend/src/pages/: home.js  login.js  logout.js
fundme/fundme/: asgi.py  ci_cl_settings.py  settings.py  urls.py  wsgi.py
fundme/fundme/ci_cl_settings/: __init__.py
fundme/receipts/: models.py  tests.py
fundme/receipts/migrations/: 0001_add_receipt_model.py
fundme/templates/: base.html
fundme/userprofile/: models.py
fundme/userprofile/migrations/: 0001_create_profile.py
nginx/: Dockerfile
workflow-templates/: fundme-ci.properties.json  fundme-ci.yml
