[tool.poetry]
name = "fundme"
version = "0.1.0"
description = "A django app to collect payments"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.16"
Django = "^4.2.7"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
Pillow = "^10.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
